@@ -262,6 +262,10 @@ CVS code -
 	- If one of the help strings ends in newlines followed by a
 	  space, move the space to the next help string to make it
 	  easier for translators to see. (Benno Schulenberg)
+	- Make sure we have enough memory in all cases when displaying
+	  the shortcut and toggle lists. (DLR)
+	- Wrap the shortcut list help text, for consistency with the
+	  toggle help text. (DLR, suggested by Benno Schulenberg)
   parse_help_input()
 	- Add Space and - as aliases for PageDown and PageUp, for
 	  consistency with the file browser. (DLR, suggested by Benno
